# Human-Pose-Estimation-Lite-cpp

./: CMakeLists.txt  README.md
data/test_image/person/: README.md
data/tnn/coco_person/: mbv2_1.0_g_17_192_256_128_s1.25_sim.opt.tnnproto
src/: KeyPointDetector.cpp  KeyPointDetector.h  Types.h  main_for_pose.cpp
